--- a/CustomDataBinding/build.gradle
+++ b/CustomDataBinding/build.gradle
@@ -23,6 +23,11 @@ android {
         }
     }
 
+    dataBinding {
+        //noinspection DataBindingWithoutKapt
+        enabled true
+    }
+
 }
 
 dependencies {
@@ -34,4 +39,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+
 }
