--- a/CustomWorkManager/build.gradle
+++ b/CustomWorkManager/build.gradle
@@ -1,19 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
 
-    dataBinding {
-        //noinspection DataBindingWithoutKapt
-        enabled = true
-    }
 
     defaultConfig {
-        applicationId "com.gnetop.sdk.customroom"
+        applicationId "com.gnetop.sdk.customworkmanager"
         minSdkVersion 18
         targetSdkVersion 29
         versionCode 1
@@ -40,11 +34,4 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-    // room
-    implementation "androidx.room:room-runtime:2.2.3"
-    implementation "androidx.room:room-ktx:2.2.3"
-    kapt "androidx.room:room-compiler:2.2.3"
-    androidTestImplementation "androidx.room:room-testing:2.2.3"
-    implementation "androidx.work:work-runtime-ktx:2.2.0"
 }
