--- a/CustomWorkManager/build.gradle
+++ b/CustomWorkManager/build.gradle
@@ -34,4 +34,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //workManager
+    implementation "androidx.work:work-runtime-ktx:$work"
+    //运行时权限
+    implementation 'com.github.muyishuangfeng:RequestPermission:1.0.2'
+    implementation "com.github.bumptech.glide:glide:$glide"
+    implementation "com.jakewharton.timber:timber:$timber"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
 }
