--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,13 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
-
     ext.kotlinVersion = '1.3.61'
     ext.coroutinesVersion = "1.3.0-M2"
+    ext.work = "2.2.0"
+    ext.glide = "4.10.0"
+    ext.timber = "4.7.1"
+    ext.lifecycle = "2.1.0"
+
     repositories {
         google()
         jcenter()
@@ -22,7 +26,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
