--- a/CustomLiveData/src/main/AndroidManifest.xml
+++ b/CustomLiveData/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activity.SecondActivity"></activity>
+        <activity android:name=".activity.ThirdActivity"/>
+        <activity android:name=".activity.SecondActivity"
+            android:launchMode="singleTask"/>
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
